<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="200dp"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/textView_signin_title"
		style="@style/Style_Black_TextView_Title"
		android:text="Login....." />

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<LinearLayout
			android:id="@+id/layout_signin_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:orientation="vertical"
			>

			<TableLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:shrinkColumns="0"
				android:stretchColumns="1" 
				android:layout_margin="20dp">

				<TableRow>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/login_label_UserName" />

					<EditText
						android:id="@+id/editText_signin_uName"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="text" />
				</TableRow>

				<TableRow>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/login_label_Psd" />

					<EditText
						android:id="@+id/editText_signin_uPsd"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="text"
						android:password="true" />
				</TableRow>
			</TableLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<Button
					android:id="@+id/button_signin_confirm"
					style="@style/Style_Black_StrechButton"
					android:layout_weight="1"
					android:text="@string/Confirm" />

				<Button
					android:id="@+id/button_signin_cancle"
					style="@style/Style_Black_StrechButton"
					android:layout_weight="1"
					android:text="@string/CANCLE" />
			</LinearLayout>
		</LinearLayout>
	
		<LinearLayout 
			android:id="@+id/layout_signin_loading"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="invisible"
			>
			<ProgressBar 
				android:id="@+id/progressBar_signin"
				android:layout_marginTop="8dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>
	</FrameLayout>

</LinearLayout>