<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<!-- 登陆界面 -->
	<LinearLayout android:id="@+id/layout_login"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:orientation="vertical">
		<TableLayout android:layout_width="match_parent"
			android:layout_height="match_parent" android:stretchColumns="1">
			<TableRow android:layout_height="wrap_content">
				<TextView android:text="Login." android:layout_height="wrap_content"
					android:layout_width="match_parent" />
				<TextView android:layout_column="2" android:layout_height="wrap_content"
					android:layout_width="10dp" />
			</TableRow>
			<TableRow android:layout_height="wrap_content">
				<TextView style="@style/Style_Black_TextView_label"
					android:text="@string/login_label_UserName" />
				<EditText android:id="@+id/editText_login_UName" style="@style/Style_Black_editText"
					android:text="aa" />

			</TableRow>
			<TableRow android:layout_height="wrap_content">
				<TextView style="@style/Style_Black_TextView_label"
					android:text="@string/login_label_Psd" />
				<EditText android:id="@+id/editText_lgoin_Psd"
					android:inputType="textPassword" style="@style/Style_Black_editText"
					android:text="aa" />

			</TableRow>
		</TableLayout>
		<LinearLayout 
			android:layout_height="wrap_content" android:layout_width="wrap_content">
			<TextView 
				android:id="@+id/textView_myLego_register"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:text="@string/mylego_register"
				/>
		</LinearLayout>
		<RelativeLayout android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<Button android:id="@+id/button_myLegoing_DoLogin"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:text="Login" android:layout_alignParentRight="true"
				android:layout_alignParentTop="true" />
			<ProgressBar android:id="@+id/progressBar_myLegoing_loging"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_alignParentLeft="true" android:layout_margin="20dp"
				android:layout_alignParentBottom="true" android:visibility="invisible" />
		</RelativeLayout>
	</LinearLayout>
	<!-- 登陆后的界面 -->
	<LinearLayout android:id="@+id/layout_loggedIn"
		android:orientation="vertical" android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout android:orientation="horizontal"
			android:layout_width="match_parent" android:layout_height="wrap_content">
			<RadioGroup android:id="@+id/radioGroup_myLego_Types"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:orientation="horizontal">
				<RadioButton android:id="@+id/radioButton_myLego_Set"
					android:layout_marginLeft="5dp" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="Set"
					android:checked="true" />
				<RadioButton android:id="@+id/radioButton_myLego_Minifig"
					android:layout_marginLeft="5dp" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="Fig" />
				<RadioButton android:id="@+id/radioButton_myLego_Part"
					android:layout_marginLeft="5dp" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="Part" />
				<RadioButton android:id="@+id/radioButton_myLego_PartsFromSet"
					android:layout_marginLeft="5dp" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="fromSet" />

				<!-- <RelativeLayout android:id="@+id/relativeLayout_Account" android:layout_width="60dp" 
					android:layout_height="50dp" android:layout_alignParentTop="true" android:layout_marginTop="-50dp" 
					android:layout_alignParentRight="true"> <ImageView android:id="@+id/imageView_myLego_AccountBack" 
					android:layout_width="100dp" android:layout_height="60dp" android:scaleType="fitXY" 
					android:layout_alignParentRight="true" android:layout_alignParentTop="true" 
					android:layout_marginTop="10dp" android:layout_alignParentRight="true" android:src="@drawable/account_back" 
					/> -->
				<!-- <ImageView android:layout_width="15dp" android:layout_height="25dp" 
					android:src="@drawable/user_minifig" android:layout_marginLeft="5dp" android:layout_alignParentLeft="true" 
					android:layout_centerVertical="true" /> <TextView android:id="@+id/textView_Account" 
					android:layout_width="wrap_content" android:layout_height="wrap_content" 
					android:layout_alignParentRight="true" android:layout_centerVertical="true" 
					android:layout_marginTop="5dp" android:text="Guest" android:textColor="@color/green" 
					android:layout_marginRight="10dp" /> </RelativeLayout> -->
			</RadioGroup>
		</LinearLayout>
		<RelativeLayout android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<!-- <ImageView android:layout_width="match_parent" android:layout_height="40dp" 
				android:src="@drawable/title2_back" android:layout_alignParentTop="true"/> -->

			<FrameLayout android:layout_width="match_parent"
				android:layout_height="match_parent">
				<LinearLayout android:id="@+id/linearLayout_fromSets"
					android:visibility="invisible" android:orientation="vertical"
					android:layout_width="match_parent" android:layout_height="match_parent">
					<LinearLayout android:orientation="horizontal"
						android:layout_width="match_parent" android:layout_height="wrap_content">
						<TextView style="@style/Style_Black_TextView_label_l2"
							android:text="@string/label_myLego_Selected" />
						<TextView style="@style/Style_Black_TextView_labelValueGreen"
							android:id="@+id/textView_myLego_Selected" />

						<TextView style="@style/Style_Black_TextView_label_l2"
							android:text="@string/label_myLego_loadSuccess" />
						<TextView style="@style/Style_Black_TextView_labelValueGreen"
							android:id="@+id/textView_myLego_loadSuccess" />

						<TextView style="@style/Style_Black_TextView_label_l2"
							android:text="@string/label_myLego_allPartsCount" />
						<TextView style="@style/Style_Black_TextView_labelValueGreen"
							android:id="@+id/textView_myLego_allPartsCount" />
					</LinearLayout>

					<ListView android:id="@+id/listView_MyLegoing_items"
						android:cacheColorHint="#00000000" android:layout_width="match_parent"
						android:layout_height="wrap_content">
					</ListView>
				</LinearLayout>
				<LinearLayout android:id="@+id/linearLayout_userItems"
					android:orientation="vertical" android:layout_width="match_parent"
					android:layout_height="match_parent">
					<ExpandableListView android:id="@+id/expandableListView_myLego_Sets"
						android:layout_width="match_parent" android:layout_height="match_parent"></ExpandableListView>
				</LinearLayout>
				<ProgressBar android:id="@+id/progressBar_MyLegoing_loadingMyItems"
					android:layout_gravity="center" android:layout_width="100dp"
					android:layout_height="100dp" />
			</FrameLayout>

		</RelativeLayout>
	</LinearLayout>
</FrameLayout>
